apps/downloaders/radarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: downloaders
    app.kubernetes.io/component: radarr
    app.kubernetes.io/part-of: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: downloaders
      app.kubernetes.io/component: radarr
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app.kubernetes.io/name: downloaders
        app.kubernetes.io/component: radarr
        app.kubernetes.io/part-of: media
    spec:
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
          name: http
        startupProbe:
          httpGet:
            port: http
            path: /radarr/ping
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          httpGet:
            port: http
            path: /radarr/ping
          periodSeconds: 60
        readinessProbe:
          httpGet:
            port: http
            path: /radarr/ping
          periodSeconds: 60
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: run
          mountPath: /run
        - name: config
          mountPath: /config
          readOnly: false
        - name: media-library
          mountPath: /media
          readOnly: false
        resources:
          requests:
            memory: 128Mi
            cpu: 500m
          limits:
            memory: 512Mi
            cpu: 1
      volumes:
      - name: run
        emptyDir:
          medium: Memory
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: media-library
        persistentVolumeClaim:
          claimName: media-library
